--- a/src/maxlength.html
+++ b/src/maxlength.html
@@ -17,7 +17,7 @@
   <script>
     let el = document.querySelector('input');
     el.addEventListener('input', function(e){
-      if(e.target.value.length > e.target.maxLength){
+      if(e.target.value.length >= e.target.maxLength){
         e.target.value = e.target.value.substr(0, e.target.maxLength)
         console.log(e)
         e.target.blur();
