--- a/src/access.html
+++ b/src/access.html
@@ -16,7 +16,7 @@
   </style>
 </head>
 <body>
-  <img src="./bunny1.jpg" alt="" aria-describedby="promo-details">
+  <img src="./bunny1.jpg" alt="" aria-describedby="promo-details" tabindex="0">
   <div class="sr-only" id="promo-details">
     <p>안녕1</p>
     <p>스크린리더2</p>
