--- a/src/access.html
+++ b/src/access.html
@@ -16,12 +16,22 @@
   </style>
 </head>
 <body>
-  <img src="./bunny1.jpg" alt="" aria-describedby="promo-details" tabindex="0">
+  <!-- <img src="./bunny1.jpg" alt="" aria-describedby="promo-details" tabindex="0">
   <div class="sr-only" id="promo-details">
     <p>안녕1</p>
     <p>스크린리더2</p>
     <p>스크린리더3</p>
     <p>스크린리더4</p>
-  </div>
+  </div> -->
+  <figure>
+    <img src="./bunny1.jpg" alt="이벤트 안내 이미지">
+    <figcaption class="sr-only">
+      <h2>이벤트 안내</h2>
+      <p>안녕1</p>
+      <p>스크린리더2</p>
+      <p>스크린리더3</p>
+      <p>스크린리더4</p>
+    </figcaption>
+  </figure>
 </body>
 </html>
