--- a/src/access.html
+++ b/src/access.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -23,9 +23,9 @@
     <p>스크린리더3</p>
     <p>스크린리더4</p>
   </div> -->
-  <figure>
+  <figure aria-describedby="reading">
     <img src="./bunny1.jpg" alt="이벤트 안내 이미지">
-    <figcaption class="sr-only">
+    <figcaption class="sr-only" id="reading">
       <h2>이벤트 안내</h2>
       <p>안녕1</p>
       <p>스크린리더2</p>
