--- a/src/access.html
+++ b/src/access.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>접근성</title>
   <style>
+    *{padding:0;margin:0;}
     .sr-only {
       position: absolute;
       width: 1px;
@@ -18,11 +19,13 @@
       overflow:hidden;
     }
     .desc_box {
-      width:80%;
-      height:auto;
-      position:absolute;
+      width: 1px;
+      height: 1px;
+      overflow: hidden;
+      position:relative;
       left:0;
       top:0;
+      margin-top:-100px;
       z-index:-1;
     }
   </style>
