--- a/src/access.html
+++ b/src/access.html
@@ -39,8 +39,8 @@
     <p>스크린리더4</p>
   </div> -->
   <div class="wrap">
-  <img src="./bunny1.jpg" alt="이벤트 안내 이미지">
-  <div class="desc_box">
+  <img src="./bunny1.jpg" alt="이벤트 안내 이미지" aria-describedby="promo-details">
+  <div class="desc_box" id="promo-details">
     <h2>이벤트 안내</h2>
     <p>안녕1</p>
     <p>스크린리더2</p>
