--- a/src/access.html
+++ b/src/access.html
@@ -39,14 +39,16 @@
     <p>스크린리더4</p>
   </div> -->
   <div class="wrap">
-  <img src="./bunny1.jpg" alt="이벤트 안내 이미지" aria-describedby="promo-details">
-  <div class="desc_box" id="promo-details">
+  <img src="./bunny1.jpg" alt="이벤트 안내 이미지">
+  <section aria-describedby="promo-details" class="desc_box">
+  <div id="promo-details">
     <h2>이벤트 안내</h2>
     <p>안녕1</p>
     <p>스크린리더2</p>
     <p>스크린리더3</p>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit eligendi aspernatur quibusdam iure voluptatum molestias voluptates! Magni, enim? Atque temporibus fuga architecto qui commodi perferendis numquam minus eos expedita laborum!</p>
   </div>
+  </section>
   </div>
 </body>
 </html>
