--- a/src/access.html
+++ b/src/access.html
@@ -17,17 +17,13 @@
     .wrap {
       position:relative;
       overflow:hidden;
+      height:750px;
     }
     .desc_box {
-      width: 1px;
-      height: 1px;
-      overflow: hidden;
       position:relative;
-      left:0;
-      top:0;
-      margin-top:-100px;
-      z-index:-1;
+      left:0;top:0;
     }
+    img{display:block;width:100%;object-fit:contain; position:absolute;left:0;top:0;z-index:1;}
   </style>
 </head>
 <body>
