--- a/src/access.html
+++ b/src/access.html
@@ -22,8 +22,9 @@
     .desc_box {
       position:relative;
       left:0;top:0;
+      opacity:0;
     }
-    img{display:block;width:100%;object-fit:contain; position:absolute;left:0;top:0;z-index:1;}
+    img{display:block;width:100%;object-fit:contain; position:absolute;left:0;top:0;}
   </style>
 </head>
 <body>
