--- a/src/access.html
+++ b/src/access.html
@@ -23,6 +23,7 @@
       position:relative;
       left:0;top:0;
       opacity:0;
+      height:100%;
     }
     img{display:block;width:100%;object-fit:contain; position:absolute;left:0;top:0;}
   </style>
