--- a/src/access.html
+++ b/src/access.html
@@ -22,7 +22,6 @@
     .desc_box {
       position:relative;
       left:0;top:0;
-      opacity:0;
       height:100%;
     }
     img{display:block;width:100%;object-fit:contain; position:absolute;left:0;top:0;}
@@ -37,9 +36,9 @@
     <p>스크린리더4</p>
   </div> -->
   <div class="wrap">
-  <img src="./bunny1.jpg" alt="이벤트 안내 이미지">
   <section aria-describedby="promo-details" class="desc_box">
-  <div id="promo-details">
+    <img src="./bunny1.jpg" alt="이벤트 안내 이미지">
+  <div id="promo-details" class="sr-only">
     <h2>이벤트 안내</h2>
     <p>안녕1</p>
     <p>스크린리더2</p>
