--- a/src/access.html
+++ b/src/access.html
@@ -14,17 +14,12 @@
       overflow: hidden;
       clip: rect(0, 0, 0, 0);
     }
-    .wrap {
-      position:relative;
-      overflow:hidden;
-      height:750px;
-    }
     .desc_box {
       position:relative;
       left:0;top:0;
       height:100%;
     }
-    img{display:block;width:100%;object-fit:contain; position:absolute;left:0;top:0;}
+    img{display:block;width:100%;object-fit:cover;}
   </style>
 </head>
 <body>
@@ -35,7 +30,6 @@
     <p>스크린리더3</p>
     <p>스크린리더4</p>
   </div> -->
-  <div class="wrap">
   <section aria-describedby="promo-details" class="desc_box">
     <img src="./bunny1.jpg" alt="이벤트 안내 이미지">
   <div id="promo-details" class="sr-only">
@@ -46,6 +40,5 @@
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit eligendi aspernatur quibusdam iure voluptatum molestias voluptates! Magni, enim? Atque temporibus fuga architecto qui commodi perferendis numquam minus eos expedita laborum!</p>
   </div>
   </section>
-  </div>
 </body>
 </html>
