--- a/src/access.html
+++ b/src/access.html
@@ -30,8 +30,8 @@
     <p>스크린리더3</p>
     <p>스크린리더4</p>
   </div> -->
-  <section aria-describedby="promo-details" class="desc_box">
-    <img src="./bunny1.jpg" alt="이벤트 안내 이미지">
+  <section class="desc_box">
+    <img src="./bunny1.jpg" alt="이벤트 안내 이미지" aria-describedby="promo-details" >
   <div id="promo-details" class="sr-only">
     <h2>이벤트 안내</h2>
     <p>안녕1</p>
