--- a/src/access.html
+++ b/src/access.html
@@ -40,5 +40,20 @@
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit eligendi aspernatur quibusdam iure voluptatum molestias voluptates! Magni, enim? Atque temporibus fuga architecto qui commodi perferendis numquam minus eos expedita laborum!</p>
   </div>
   </section>
+  <section class="desc_box">
+    <img src="./bunny1.jpg" alt="이벤트 안내 이미지2" aria-describedby="promo-details2" >
+  <div id="promo-details2" class="sr-only">
+    <h2>22222222</h2>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit eligendi aspernatur quibusdam iure voluptatum molestias voluptates! Magni, enim? Atque temporibus fuga architecto qui commodi perferendis numquam minus eos expedita laborum!</p>
+  </div>
+  </section>
+  <section class="desc_box">
+    <img src="./bunny1.jpg" alt="이벤트 안내 이미지3" aria-describedby="promo-details3" >
+  <div id="promo-details3" class="sr-only">
+    <h2>333333333</h2>
+    <p>읽기 3333</p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit eligendi aspernatur quibusdam iure voluptatum molestias voluptates! Magni, enim? Atque temporibus fuga architecto qui commodi perferendis numquam minus eos expedita laborum!</p>
+  </div>
+  </section>
 </body>
 </html>
