--- a/src/access.html
+++ b/src/access.html
@@ -23,14 +23,7 @@
   </style>
 </head>
 <body>
-  <!-- <img src="./bunny1.jpg" alt="" aria-describedby="promo-details" tabindex="0">
-  <div class="sr-only" id="promo-details">
-    <p>안녕1</p>
-    <p>스크린리더2</p>
-    <p>스크린리더3</p>
-    <p>스크린리더4</p>
-  </div> -->
-  <section class="desc_box">
+  <div class="desc_box">
     <img src="./bunny1.jpg" alt="이벤트 안내 이미지" aria-describedby="promo-details" >
   <div id="promo-details" class="sr-only">
     <h2>이벤트 안내</h2>
@@ -39,21 +32,21 @@
     <p>스크린리더3</p>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit eligendi aspernatur quibusdam iure voluptatum molestias voluptates! Magni, enim? Atque temporibus fuga architecto qui commodi perferendis numquam minus eos expedita laborum!</p>
   </div>
-  </section>
-  <section class="desc_box">
+  </div>
+  <div class="desc_box">
     <img src="./bunny1.jpg" alt="이벤트 안내 이미지2" aria-describedby="promo-details2" >
   <div id="promo-details2" class="sr-only">
     <h2>22222222</h2>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit eligendi aspernatur quibusdam iure voluptatum molestias voluptates! Magni, enim? Atque temporibus fuga architecto qui commodi perferendis numquam minus eos expedita laborum!</p>
   </div>
-  </section>
-  <section class="desc_box">
+  </div>
+  <div class="desc_box">
     <img src="./bunny1.jpg" alt="이벤트 안내 이미지3" aria-describedby="promo-details3" >
   <div id="promo-details3" class="sr-only">
     <h2>333333333</h2>
     <p>읽기 3333</p>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit eligendi aspernatur quibusdam iure voluptatum molestias voluptates! Magni, enim? Atque temporibus fuga architecto qui commodi perferendis numquam minus eos expedita laborum!</p>
   </div>
-  </section>
+  </div>
 </body>
 </html>
