--- a/src/access.html
+++ b/src/access.html
@@ -15,16 +15,14 @@
       clip: rect(0, 0, 0, 0);
     }
     .desc_box {
-      position:relative;
-      left:0;top:0;
-      height:100%;
     }
-    img{display:block;width:100%;object-fit:cover;}
+    img{width:100%;object-fit:cover;}
   </style>
 </head>
 <body>
   <div class="wrap">
     <div class="wrap-depth2">
+      <div class="wrap-depth3">
       <div class="desc_box">
         <img src="./bunny1.jpg" alt="이벤트 안내 이미지" aria-describedby="promo-details" >
       <div id="promo-details" class="sr-only">
@@ -50,6 +48,7 @@
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit eligendi aspernatur quibusdam iure voluptatum molestias voluptates! Magni, enim? Atque temporibus fuga architecto qui commodi perferendis numquam minus eos expedita laborum!</p>
       </div>
       </div>
+    </div>
     </div>
   </div>
 </body>
