--- a/src/access.html
+++ b/src/access.html
@@ -30,9 +30,9 @@
     <div class="wrap-depth2">
       <div class="wrap-depth3">
       <div class="desc_box">
-        <img src="./bunny1.jpg" alt="이벤트 안내 이미지" aria-describedby="promo-details" >
+        <img src="./bunny1.jpg" alt="이벤트 안내 이미지" aria-labelledby="event-title" aria-describedby="promo-details" >
+        <h2 id="event-title" class="sr-only">이벤트 안내</h2>
         <div id="promo-details" class="sr-only">
-          <h2>이벤트 안내</h2>
           <p>안녕1</p>
           <p>스크린리더2</p>
           <p>스크린리더3</p>
