--- a/src/access.html
+++ b/src/access.html
@@ -22,7 +22,7 @@
       margin: -1px;
       clip: rect(0, 0, 0, 0);
     }
-    img{width:100%;object-fit:cover;}
+    img{width:100%;object-fit:cover;user-select: none;}
   </style>
 </head>
 <body>
@@ -30,7 +30,7 @@
     <div class="wrap-depth2">
       <div class="wrap-depth3">
       <div class="desc_box">
-        <img src="./bunny1.jpg" alt="이벤트 안내 이미지" aria-labelledby="event-title" aria-describedby="promo-details" >
+        <img src="./bunny1.jpg" alt="이벤트 안내 이미지" aria-labelledby="event-title" aria-describedby="promo-details">
         <h2 id="event-title" class="sr-only">이벤트 안내</h2>
         <div id="promo-details" class="sr-only">
           <p>안녕1</p>
