--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <ul>
     <li><a href="./src/maxlength.html">maxLength</a></li>
     <li><a href="./src/access.html">Accessibility</a></li>
+    <li><a href="./src/access2.html">Accessibility Type2</a></li>
   </ul>
 </body>
 </html>
