--- a/src/maxlength.html
+++ b/src/maxlength.html
@@ -27,9 +27,14 @@
   <span></span>
   <script>
   const el = document.querySelector('input');
+  let isComposing;
+  el.addEventListener('compositionstart', () => {
+    isComposing=true;
+  })
   el.addEventListener('compositionend', () => {
+    isComposing=false;
     // 조합 완료 후 길이가 maxLength면 blur
-    if (el.value.length >= el.maxLength){
+    if (!isComposing && el.value.length >= el.maxLength){
       el.value = el.value.slice(0, el.maxLength); // 초과 입력 방지
       el.blur();
     }
