--- a/src/maxlength.html
+++ b/src/maxlength.html
@@ -34,7 +34,8 @@
   el.addEventListener('compositionend', () => {
     isComposing=false;
     // 조합 완료 후 길이가 maxLength면 blur
-    if (!isComposing && el.value.length >= el.maxLength){
+    if ((isComposing===false) && el.value.length >= el.maxLength){
+      console.log('in')
       el.value = el.value.slice(0, el.maxLength); // 초과 입력 방지
       el.blur();
     }
