--- a/src/maxlength.html
+++ b/src/maxlength.html
@@ -27,18 +27,12 @@
   <span></span>
   <script>
   const el = document.querySelector('input');
-  let isComposing=true;
-  el.addEventListener('compositionstart', () => {
-    isComposing=true;
-  })
   el.addEventListener('compositionend', () => {
-    isComposing=false;
     // 조합 완료 후 길이가 maxLength면 blur
-    if ((isComposing===false) && el.value.length >= el.maxLength){
+    if (el.value.length >= el.maxLength){
       console.log('in')
       el.value = el.value.slice(0, el.maxLength); // 초과 입력 방지
       el.blur();
-      isComposing=true;
     }
   });
   </script>
