--- a/src/maxlength.html
+++ b/src/maxlength.html
@@ -27,12 +27,14 @@
   <span></span>
   <script>
   const el = document.querySelector('input');
-  el.addEventListener('compositionend', () => {
-    // 조합 완료 후 길이가 maxLength면 blur
-    if (el.value.length >= el.maxLength){
-      console.log('in')
-      el.value = el.value.slice(0, el.maxLength); // 초과 입력 방지
-      el.blur();
+  el.addEventListener('input', () => {
+    if (el.value.length >= el.maxLength) {
+      // 조합 완료 후 길이가 maxLength면 blur
+      el.addEventListener('compositionend', function(){
+        console.log('in')
+        el.value = el.value.slice(0, el.maxLength); // 초과 입력 방지
+        el.blur();
+      })
     }
   });
   </script>
